[REZA] Add retrolambda dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
+
+retrolambda {
+    jvmArgs '-noverify'
+}
 
 android {
     compileSdkVersion 26
