--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.google.dagger:dagger:2.10'
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    apt 'com.github.bumptech.glide:compiler:4.0.0-RC1'
     apt 'com.google.dagger:dagger-compiler:2.10'
     testCompile 'junit:junit:4.12'
 }
