--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.google.dagger:dagger:2.10'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     apt 'com.github.bumptech.glide:compiler:4.0.0-RC1'
+    apt "com.android.databinding:compiler:2.3.3"
     apt 'com.google.dagger:dagger-compiler:2.10'
     testCompile 'junit:junit:4.12'
 }
